--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "codewizz/laravel-reddit-api",
+    "name": "ftrotter/laravel-reddit-api",
     "description": "Laravel Reddit API wrapper",
     "keywords": [
         "codewizz",
@@ -19,7 +19,7 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": "^7.2|^8.0",
         "ext-curl": "*",
         "ext-json": "*",
         "illuminate/support": "^6.0|^7.0|^8.0|^9.0"
